--- a/src/app/budget-item-list/budget-item-list.component.html
+++ b/src/app/budget-item-list/budget-item-list.component.html
@@ -5,18 +5,28 @@
             <h1>Income</h1>
 
             <div class="budget-items">
-                <app-budget-item-card [isIncome]="true" style="margin-bottom: 20px;"></app-budget-item-card>
-                <app-budget-item-card [isIncome]="true" style="margin-bottom: 20px;"></app-budget-item-card>
+                <div *ngFor="let item of budgetItems">
+                    <app-budget-item-card
+                      *ngIf="item.amount >= 0"
+                      [item]="item"
+                      style="display: block; margin-bottom: 20px;">
+                    </app-budget-item-card>
+                </div>
             </div>
         </div>
 
         <div class="expenses-column">
             <h1>Expenses</h1>
-            
+
             <div class="budget-items">
-                <app-budget-item-card [isIncome]="false" style="margin-bottom: 20px;"></app-budget-item-card>
-                <app-budget-item-card [isIncome]="false" style="margin-bottom: 20px;"></app-budget-item-card>
-            </div>
+              <div *ngFor="let item of budgetItems">
+                  <app-budget-item-card
+                    *ngIf="item.amount < 0"
+                    [item]="item"
+                    style="display: block; margin-bottom: 20px;">
+                  </app-budget-item-card>
+              </div>
+          </div>
         </div>
     </div>
 </section>
